Linked packages to license

--- a/src/AccidentalFish.Strava.TokenManager/AccidentalFish.Strava.TokenManager.csproj
+++ b/src/AccidentalFish.Strava.TokenManager/AccidentalFish.Strava.TokenManager.csproj
@@ -10,6 +10,7 @@
     <RepositoryUrl>https://github.com/JamesRandall/StravaTokenManager</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageLicenseUrl>https://github.com/JamesRandall/FunctionMonkey/blob/master/LICENSE</PackageLicenseUrl>
   </PropertyGroup>
 
   <ItemGroup>
