--- a/src/AccidentalFish.Strave.TokenManager.AzureTableStorageTokenStore/AccidentalFish.Strave.TokenManager.AzureTableStorageTokenStore.csproj
+++ b/src/AccidentalFish.Strave.TokenManager.AzureTableStorageTokenStore/AccidentalFish.Strave.TokenManager.AzureTableStorageTokenStore.csproj
@@ -11,6 +11,7 @@
     <Product>AccidentalFish.Strave.TokenManager.AzureTableStorageTokenStore</Product>
     <Description>Azure Table Storage repository for tokens</Description>
     <Copyright>(c) 2019 James Randall</Copyright>
+    <PackageLicenseUrl>https://github.com/JamesRandall/FunctionMonkey/blob/master/LICENSE</PackageLicenseUrl>
   </PropertyGroup>
 
   <ItemGroup>
