--- a/src/AccidentalFish.Strava.TokenManager.Abstractions/AccidentalFish.Strava.TokenManager.Abstractions.csproj
+++ b/src/AccidentalFish.Strava.TokenManager.Abstractions/AccidentalFish.Strava.TokenManager.Abstractions.csproj
@@ -10,6 +10,7 @@
     <Copyright>(c) 2019 James Randall</Copyright>
     <PackageProjectUrl>https://github.com/JamesRandall/StravaTokenManager</PackageProjectUrl>
     <RepositoryUrl>https://github.com/JamesRandall/StravaTokenManager</RepositoryUrl>
+    <PackageLicenseUrl>https://github.com/JamesRandall/FunctionMonkey/blob/master/LICENSE</PackageLicenseUrl>
   </PropertyGroup>
 
 </Project>
